# linux_course_2021

./: README.md
02_TerminalProject/: Show  Show.c  test_file
03_Multifile/: Makefile
03_TerminalProject/: Makefile
04_Text/: randomizer.sh
05_Debugging/: Makefile  gdb_scenario_1  gdb_scenario_2  range.c  test_1  test_2
06_TracingFencing/: Makefile  move.c  pre_lib.c  tests.sh
07_Environmental/: Makefile.am  configure.ac  rhasher.c  tests.sh
08_Regexps/: Makefile.am  configure.ac  esub.c  tests.sh
09_Testing/: Makefile.am  configure.ac
09_Testing/src/: Makefile.am  buf.c  buf.h
09_Testing/tests/: Makefile.am  test.ts  test_free.ts  test_null.ts  test_pop.ts  test_push.ts  test_trunc.ts
10_I18n/: configure.ac
10_I18n/po/: Makefile.am  ru.po
10_I18n/src/: Makefile.am
11_Documenting/src/: find.c
